--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Copyright goes :skull:
+*.mp3
+*.wav
+*.ogg
+
+# Oversubstitution
+public/oversubstitution/data.json
+public/oversubstitution/oversubstitution.wav
